# Fun-Game

./: CONTRIBUTING.md  Caddyfile  Jenkinsfile  README.md  package-lock.json
.github/workflows/: build_server.yml  rust.yml  test.yml
ci/: .env  Dockerfile  docker-compose.yml  test.sh
client/: .env.sample  .eslintrc  .gitignore  .prettierrc  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
client/flatbuffers/: Chat.ts  ClientMessages.ts  Game.ts  GameState.ts  Math.ts  Player.ts  ServerMessages.ts  User.ts  client-messages.ts  server-messages.ts
client/public/: manifest.json
client/src/: config.tsx
flatbuffers/: Chat.fbs  ClientMessages.fbs  Game.fbs  GameMetadata.fbs  GameState.fbs  Math.fbs  Player.fbs  ServerMessages.fbs  User.fbs
flatbuffers/Messages/: ClientMessages.fbs  (+1 more)
server/: .env  1  Cargo.toml  rustfmt.toml  sync_flatbuffers.sh
server/flatbuffers/: ClientMessages.rs  ClientMessages_generated.rs  GameState.rs  GameState_generated.rs  Game_generated.rs  Player_generated.rs  ServerMessages.rs  ServerMessages_generated.rs  User.rs
server/src/: fbs.rs  main.rs  server.rs  types.rs  utils.rs
server/src/fbs/: Chat.rs  ClientMessages.rs  Game.rs  GameMetadata.rs  GameState.rs  Math.rs  Player.rs  ServerMessages.rs  User.rs
server/src/handler/: handler.rs
server/src/services/: chat_service.rs  http_service.rs  mod.rs  web_rtc_service.rs
server/src/utils/: handler.rs  http_service.rs  state.rs  web_rtc_service.rs  ws_service.rs
server/tests/: test_add.rs
sfx/: README.md  random walk drunk.pd  wavetable sketch.pd
(+96 files in other folders)
