[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Donovan Henry <donovanphenry@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.25", features = ["full"]}
futures = "0.1"
websocket = "0.22.0"
