[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Donovan Henry <donovanphenry@gmail.com>"]


[dependencies]
byteorder = "1.3"
clap = "3.0"
crc = "3.0"
futures = "0.3"
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = { version = "0.3" }
futures-util = { version = "0.3", features = ["sink"] }
http = "0.2"
log = "0.4"
openssl = "0.10"
pin-project = "1.0"
rand = "0.8"
tokio = {version = "1.25", features = ["full"]}
hyper = { version = "0.14", features = ["http1", "runtime", "server", "stream"] }
webrtc-unreliable = "0.5.3"
env_logger = "0.9"
flatbuffers = "23.1.20"
dotenv = "0.15.0"
chrono = "0.4.23"


[[src]]
name = "echo-server"
required-features = ["tokio"]
